crates/cli/tests/snapshots/snapshot_tests__json_mixed_severity.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: redact_version(&json_str)
---
{
  "schema_version": 3,
  "version": "[VERSION]",
  "elapsed_ms": 42,
  "total_issues": 14,
  "summary": {
    "total_issues": 14,
    "unused_files": 1,
    "unused_exports": 1,
    "unused_types": 1,
    "unused_dependencies": 3,
    "unused_enum_members": 1,
    "unused_class_members": 1,
    "unresolved_imports": 1,
    "unlisted_dependencies": 1,
    "duplicate_exports": 1,
    "type_only_dependencies": 1,
    "test_only_dependencies": 1,
    "circular_dependencies": 1,
    "boundary_violations": 0,
    "stale_suppressions": 0
  },
  "unused_files": [
    {
      "path": "src/dead.ts",
      "actions": [
        {
          "type": "delete-file",
          "auto_fixable": false,
          "description": "Delete this file",
          "note": "File deletion may remove runtime functionality not visible to static analysis"
        },
        {
          "type": "suppress-file",
          "auto_fixable": false,
          "description": "Suppress with a file-level comment at the top of the file",
          "comment": "// fallow-ignore-file unused-file"
        }
      ]
    }
  ],
  "unused_exports": [
    {
      "path": "src/utils.ts",
      "export_name": "helperFn",
      "is_type_only": false,
      "line": 10,
      "col": 4,
      "span_start": 120,
      "is_re_export": false,
      "actions": [
        {
          "type": "remove-export",
          "auto_fixable": true,
          "description": "Remove the `export` keyword from the declaration"
        },
        {
          "type": "suppress-line",
          "auto_fixable": false,
          "description": "Suppress with an inline comment above the line",
          "comment": "// fallow-ignore-next-line unused-export"
        }
      ]
    }
  ],
  "unused_types": [
    {
      "path": "src/types.ts",
      "export_name": "OldType",
      "is_type_only": true,
      "line": 5,
      "col": 0,
      "span_start": 60,
      "is_re_export": false,
      "actions": [
        {
          "type": "remove-export",
          "auto_fixable": true,
          "description": "Remove the `export` (or `export type`) keyword from the type declaration"
        },
        {
          "type": "suppress-line",
          "auto_fixable": false,
          "description": "Suppress with an inline comment above the line",
          "comment": "// fallow-ignore-next-line unused-type"
        }
      ]
    }
  ],
  "unused_dependencies": [
    {
      "package_name": "lodash",
      "location": "dependencies",
      "path": "package.json",
      "line": 5,
      "actions": [
        {
          "type": "remove-dependency",
          "auto_fixable": true,
          "description": "Remove from dependencies in package.json"
        },
        {
          "type": "add-to-config",
          "auto_fixable": false,
          "description": "Add \"lodash\" to ignoreDependencies in fallow config",
          "config_key": "ignoreDependencies",
          "value": "lodash"
        }
      ]
    }
  ],
  "unused_dev_dependencies": [
    {
      "package_name": "jest",
      "location": "devDependencies",
      "path": "package.json",
      "line": 5,
      "actions": [
        {
          "type": "remove-dependency",
          "auto_fixable": true,
          "description": "Remove from devDependencies in package.json"
        },
        {
          "type": "add-to-config",
          "auto_fixable": false,
          "description": "Add \"jest\" to ignoreDependencies in fallow config",
          "config_key": "ignoreDependencies",
          "value": "jest"
        }
      ]
    }
  ],
  "unused_optional_dependencies": [
    {
      "package_name": "fsevents",
      "location": "optionalDependencies",
      "path": "package.json",
      "line": 5,
      "actions": [
        {
          "type": "remove-dependency",
          "auto_fixable": true,
          "description": "Remove from optionalDependencies in package.json"
        },
        {
          "type": "add-to-config",
          "auto_fixable": false,
          "description": "Add \"fsevents\" to ignoreDependencies in fallow config",
          "config_key": "ignoreDependencies",
          "value": "fsevents"
        }
      ]
    }
  ],
  "unused_enum_members": [
    {
      "path": "src/enums.ts",
      "parent_name": "Status",
      "member_name": "Deprecated",
      "kind": "enum_member",
      "line": 8,
      "col": 2,
      "actions": [
        {
          "type": "remove-enum-member",
          "auto_fixable": true,
          "description": "Remove this enum member"
        },
        {
          "type": "suppress-line",
          "auto_fixable": false,
          "description": "Suppress with an inline comment above the line",
          "comment": "// fallow-ignore-next-line unused-enum-member"
        }
      ]
    }
  ],
  "unused_class_members": [
    {
      "path": "src/service.ts",
      "parent_name": "UserService",
      "member_name": "legacyMethod",
      "kind": "class_method",
      "line": 42,
      "col": 4,
      "actions": [
        {
          "type": "remove-class-member",
          "auto_fixable": false,
          "description": "Remove this class member",
          "note": "Class member may be used via dependency injection or decorators"
        },
        {
          "type": "suppress-line",
          "auto_fixable": false,
          "description": "Suppress with an inline comment above the line",
          "comment": "// fallow-ignore-next-line unused-class-member"
        }
      ]
    }
  ],
  "unresolved_imports": [
    {
      "path": "src/app.ts",
      "specifier": "./missing-module",
      "line": 3,
      "col": 0,
      "specifier_col": 0,
      "actions": [
        {
          "type": "resolve-import",
          "auto_fixable": false,
          "description": "Fix the import specifier or install the missing module",
          "note": "Verify the module path and check tsconfig paths configuration"
        },
        {
          "type": "suppress-line",
          "auto_fixable": false,
          "description": "Suppress with an inline comment above the line",
          "comment": "// fallow-ignore-next-line unresolved-import"
        }
      ]
    }
  ],
  "unlisted_dependencies": [
    {
      "package_name": "chalk",
      "imported_from": [
        {
          "path": "src/cli.ts",
          "line": 2,
          "col": 0
        }
      ],
      "actions": [
        {
          "type": "install-dependency",
          "auto_fixable": false,
          "description": "Add this package to dependencies in package.json",
          "note": "Verify this package should be a direct dependency before adding"
        },
        {
          "type": "add-to-config",
          "auto_fixable": false,
          "description": "Add \"chalk\" to ignoreDependencies in fallow config",
          "config_key": "ignoreDependencies",
          "value": "chalk"
        }
      ]
    }
  ],
  "duplicate_exports": [
    {
      "export_name": "Config",
      "locations": [
        {
          "path": "src/config.ts",
          "line": 15,
          "col": 0
        },
        {
          "path": "src/types.ts",
          "line": 30,
          "col": 0
        }
      ],
      "actions": [
        {
          "type": "remove-duplicate",
          "auto_fixable": false,
          "description": "Keep one canonical export location and remove the others",
          "note": "Review all locations to determine which should be the canonical export"
        },
        {
          "type": "suppress-line",
          "auto_fixable": false,
          "description": "Suppress with an inline comment above the line",
          "comment": "// fallow-ignore-next-line duplicate-export",
          "scope": "per-location"
        }
      ]
    }
  ],
  "type_only_dependencies": [
    {
      "package_name": "zod",
      "path": "package.json",
      "line": 8,
      "actions": [
        {
          "type": "move-to-dev",
          "auto_fixable": false,
          "description": "Move to devDependencies (only type imports are used)",
          "note": "Type imports are erased at runtime so this dependency is not needed in production"
        },
        {
          "type": "add-to-config",
          "auto_fixable": false,
          "description": "Add \"zod\" to ignoreDependencies in fallow config",
          "config_key": "ignoreDependencies",
          "value": "zod"
        }
      ]
    }
  ],
  "test_only_dependencies": [
    {
      "package_name": "msw",
      "path": "package.json",
      "line": 12,
      "actions": [
        {
          "type": "move-to-dev",
          "auto_fixable": false,
          "description": "Move to devDependencies (only test files import this)",
          "note": "Only test files import this package so it does not need to be a production dependency"
        },
        {
          "type": "add-to-config",
          "auto_fixable": false,
          "description": "Add \"msw\" to ignoreDependencies in fallow config",
          "config_key": "ignoreDependencies",
          "value": "msw"
        }
      ]
    }
  ],
  "circular_dependencies": [
    {
      "files": [
        "src/a.ts",
        "src/b.ts"
      ],
      "length": 2,
      "line": 3,
      "col": 0,
      "actions": [
        {
          "type": "refactor-cycle",
          "auto_fixable": false,
          "description": "Extract shared logic into a separate module to break the cycle",
          "note": "Circular imports can cause initialization issues and make code harder to reason about"
        },
        {
          "type": "suppress-line",
          "auto_fixable": false,
          "description": "Suppress with an inline comment above the line",
          "comment": "// fallow-ignore-next-line circular-dependency"
        }
      ]
    }
  ],
  "boundary_violations": [],
  "stale_suppressions": []
}
